--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+	<span class="green"></span>
+	<span class="yellow"></span>
+	<span class="red"></span>
+</div>
 </body>
 
 </html>
