--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<div>
+<div class="container">
 	<span class="green"></span>
 	<span class="yellow"></span>
 	<span class="red"></span>
